<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/xBlue"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/imgStickerMainLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/pattern">

            <ja.burhanrashid52.photoeditor.PhotoEditorView
                android:id="@+id/photoEditorView"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="bottom"
            android:layout_marginBottom="@dimen/_2sdp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="@dimen/_2sdp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/btnSelImage"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:visibility="visible"
                    app:srcCompat="@drawable/ic_pick_image" />

                <ImageView
                    android:id="@+id/btnRedo"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:padding="@dimen/_3sdp"
                    android:src="@drawable/ic_redo" />

                <ImageView
                    android:id="@+id/btnUndo"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_toLeftOf="@id/btnRedo"
                    android:padding="@dimen/_3sdp"
                    android:src="@drawable/ic_undo" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height=".7dp"
                android:layout_marginBottom="@dimen/_4sdp"
                android:layout_marginTop="@dimen/_2sdp"
                android:background="@color/colorBlackLight" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:padding="@dimen/_1sdp">

                <LinearLayout
                    android:id="@+id/btnDecoration"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/menu_icon_height_width"
                        app:srcCompat="@drawable/ic_decoration" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txtdecoration"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_10sdp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/btnText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/menu_icon_height_width"
                        app:srcCompat="@drawable/ic_text" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txttext"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_10sdp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/btnEmojies"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/menu_icon_height_width"
                        app:srcCompat="@drawable/ic_emoticon" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txtemojies"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_10sdp"
                        android:textStyle="bold" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/_1sdp"
                android:padding="@dimen/_1sdp">

                <LinearLayout
                    android:id="@+id/btnEraser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/menu_icon_height_width"
                        app:srcCompat="@drawable/ic_erase" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txteraser"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_10sdp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/btnBrush"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_1sdp"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/menu_icon_height_width"
                        app:srcCompat="@drawable/ic_brush" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txtbrush"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_10sdp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/btnMove"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_1sdp"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imgMove"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/menu_icon_height_width"
                        app:srcCompat="@drawable/ic_move_lock" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txtMove"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_10sdp"
                        android:textStyle="bold" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

    <FrameLayout
        android:id="@+id/frame_textview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        android:visibility="gone">

        <include
            android:id="@+id/lay_textview"
            layout="@layout/text_editview" />

    </FrameLayout>
</RelativeLayout>